--- a/Leaderboard/.env
+++ b/Leaderboard/.env
@@ -1,3 +1,8 @@
-TOKEN = 'Your_Token_Here'
-ADMINEXEMPT = FALSE
-ADMINLEADERBOARD = TRUE
+#What is the bot's token?
+TOKEN = 
+#Can admins Swear?
+ADMINEXEMPT = TRUE
+#message Id
+MSGID = 
+#channel Id
+CHANNELID = 
