--- a/Leaderboard/.env
+++ b/Leaderboard/.env
@@ -2,7 +2,7 @@
 TOKEN = 
 #Can admins Swear?
 ADMINEXEMPT = TRUE
-#message Id
+#message Id - must be from same user as the one editing
 MSGID = 
 #channel Id
 CHANNELID = 
